// Copyright (C) 2024  mieru authors
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package updater;

option go_package = "github.com/enfein/mieru/v3/pkg/version/updater/updaterpb";

message UpdateHistory {
    repeated UpdateRecord records = 1;
}

message UpdateRecord {
    // Time in UNIX second when this record is created.
    optional int64 timeUnix = 1;

    // The software version that runs the check update.
    optional string version = 2;

    // The latest software version, if found.
    optional string latestVersion = 3;

    // If a new release is found.
    optional bool newReleaseFound = 4;

    // An error message when check update fail.
    optional string error = 5;
}
